Added more descriptive names suggested by Tokeli

--- a/src/main/resources/assets/desirepaths/lang/en_US.lang
+++ b/src/main/resources/assets/desirepaths/lang/en_US.lang
@@ -1,6 +1,6 @@
-tile.desirepaths.grass_worn_1.name=Worn Grass 1
-tile.desirepaths.grass_worn_2.name=Worn Grass 2
-tile.desirepaths.grass_worn_3.name=Worn Grass 3
-tile.desirepaths.grass_worn_4.name=Worn Grass 4
-tile.desirepaths.grass_worn_5.name=Worn Grass 5
-tile.desirepaths.grass_worn_6.name=Worn Grass 6
+tile.desirepaths.grass_worn_1.name=Trampled Grass
+tile.desirepaths.grass_worn_2.name=Slightly Worn Grass
+tile.desirepaths.grass_worn_3.name=Worn Grass
+tile.desirepaths.grass_worn_4.name=Very Worn Grass
+tile.desirepaths.grass_worn_5.name=Patches of Grass
+tile.desirepaths.grass_worn_6.name=Bare Dirt
